; ModuleID = '/home/carl/AnghaBench/linux/drivers/fpga/extr_zynq-fpga.c_zynq_fpga_ops_write_init.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/fpga/extr_zynq-fpga.c_zynq_fpga_ops_write_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fpga_manager = type { i32, %struct.zynq_fpga_priv* }
%struct.zynq_fpga_priv = type { i32, i32 }
%struct.fpga_image_info = type { i32 }

@FPGA_MGR_ENCRYPTED_BITSTREAM = common dso_local global i32 0, align 4
@CTRL_OFFSET = common dso_local global i32 0, align 4
@CTRL_SEC_EN_MASK = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [49 x i8] c"System not secure, can't use crypted bitstreams\0A\00", align 1
@EINVAL = common dso_local global i32 0, align 4
@FPGA_MGR_PARTIAL_RECONFIG = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [91 x i8] c"Invalid bitstream, could not find a sync word. Bitstream must be a byte swapped .bin file\0A\00", align 1
@SLCR_FPGA_RST_CTRL_OFFSET = common dso_local global i32 0, align 4
@FPGA_RST_ALL_MASK = common dso_local global i32 0, align 4
@SLCR_LVL_SHFTR_EN_OFFSET = common dso_local global i32 0, align 4
@LVL_SHFTR_DISABLE_ALL_MASK = common dso_local global i32 0, align 4
@LVL_SHFTR_ENABLE_PS_TO_PL = common dso_local global i32 0, align 4
@CTRL_PCFG_PROG_B_MASK = common dso_local global i32 0, align 4
@STATUS_OFFSET = common dso_local global i32 0, align 4
@STATUS_PCFG_INIT_MASK = common dso_local global i32 0, align 4
@INIT_POLL_DELAY = common dso_local global i32 0, align 4
@INIT_POLL_TIMEOUT = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [31 x i8] c"Timeout waiting for PCFG_INIT\0A\00", align 1
@.str.3 = private unnamed_addr constant [32 x i8] c"Timeout waiting for !PCFG_INIT\0A\00", align 1
@CTRL_PCAP_PR_MASK = common dso_local global i32 0, align 4
@CTRL_PCAP_MODE_MASK = common dso_local global i32 0, align 4
@CTRL_PCAP_RATE_EN_MASK = common dso_local global i32 0, align 4
@STATUS_DMA_Q_F = common dso_local global i32 0, align 4
@STATUS_DMA_Q_E = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [29 x i8] c"DMA command queue not right\0A\00", align 1
@EBUSY = common dso_local global i32 0, align 4
@MCTRL_OFFSET = common dso_local global i32 0, align 4
@MCTRL_PCAP_LPBK_MASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.fpga_manager*, %struct.fpga_image_info*, i8*, i64)* @zynq_fpga_ops_write_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @zynq_fpga_ops_write_init(%struct.fpga_manager* %0, %struct.fpga_image_info* %1, i8* %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.fpga_manager*, align 8
  %7 = alloca %struct.fpga_image_info*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca %struct.zynq_fpga_priv*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store %struct.fpga_manager* %0, %struct.fpga_manager** %6, align 8
  store %struct.fpga_image_info* %1, %struct.fpga_image_info** %7, align 8
  store i8* %2, i8** %8, align 8
  store i64 %3, i64* %9, align 8
  %14 = load %struct.fpga_manager*, %struct.fpga_manager** %6, align 8
  %15 = getelementptr inbounds %struct.fpga_manager, %struct.fpga_manager* %14, i32 0, i32 1
  %16 = load %struct.zynq_fpga_priv*, %struct.zynq_fpga_priv** %15, align 8
  store %struct.zynq_fpga_priv* %16, %struct.zynq_fpga_priv** %10, align 8
  %17 = load %struct.zynq_fpga_priv*, %struct.zynq_fpga_priv** %10, align 8
  %18 = getelementptr inbounds %struct.zynq_fpga_priv, %struct.zynq_fpga_priv* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @clk_enable(i32 %19)
  store i32 %20, i32* %13, align 4
  %21 = load i32, i32* %13, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %25

23:                                               ; preds = %4
  %24 = load i32, i32* %13, align 4
  store i32 %24, i32* %5, align 4
  br label %237

25:                                               ; preds = %4
  %26 = load %struct.fpga_image_info*, %struct.fpga_image_info** %7, align 8
  %27 = getelementptr inbounds %struct.fpga_image_info, %struct.fpga_image_info* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = load i32, i32* @FPGA_MGR_ENCRYPTED_BITSTREAM, align 4
  %30 = and i32 %28, %29
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %32, label %47

32:                                               ; preds = %25
  %33 = load %struct.zynq_fpga_priv*, %struct.zynq_fpga_priv** %10, align 8
  %34 = load i32, i32* @CTRL_OFFSET, align 4
  %35 = call i32 @zynq_fpga_read(%struct.zynq_fpga_priv* %33, i32 %34)
  store i32 %35, i32* %11, align 4
  %36 = load i32, i32* %11, align 4
  %37 = load i32, i32* @CTRL_SEC_EN_MASK, align 4
  %38 = and i32 %36, %37
  %39 = icmp ne i32 %38, 0
  br i1 %39, label %46, label %40

40:                                               ; preds = %32
  %41 = load %struct.fpga_manager*, %struct.fpga_manager** %6, align 8
  %42 = getelementptr inbounds %struct.fpga_manager, %struct.fpga_manager* %41, i32 0, i32 0
  %43 = call i32 @dev_err(i32* %42, i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str, i64 0, i64 0))
  %44 = load i32, i32* @EINVAL, align 4
  %45 = sub nsw i32 0, %44
  store i32 %45, i32* %13, align 4
  br label %231

46:                                               ; preds = %32
  br label %47

47:                                               ; preds = %46, %25
  %48 = load %struct.fpga_image_info*, %struct.fpga_image_info** %7, align 8
  %49 = getelementptr inbounds %struct.fpga_image_info, %struct.fpga_image_info* %48, i32 0, i32 0
  %50 = load i32, i32* %49, align 4
  %51 = load i32, i32* @FPGA_MGR_PARTIAL_RECONFIG, align 4
  %52 = and i32 %50, %51
  %53 = icmp ne i32 %52, 0
  br i1 %53, label %166, label %54

54:                                               ; preds = %47
  %55 = load i8*, i8** %8, align 8
  %56 = load i64, i64* %9, align 8
  %57 = call i32 @zynq_fpga_has_sync(i8* %55, i64 %56)
  %58 = icmp ne i32 %57, 0
  br i1 %58, label %65, label %59

59:                                               ; preds = %54
  %60 = load %struct.fpga_manager*, %struct.fpga_manager** %6, align 8
  %61 = getelementptr inbounds %struct.fpga_manager, %struct.fpga_manager* %60, i32 0, i32 0
  %62 = call i32 @dev_err(i32* %61, i8* getelementptr inbounds ([91 x i8], [91 x i8]* @.str.1, i64 0, i64 0))
  %63 = load i32, i32* @EINVAL, align 4
  %64 = sub nsw i32 0, %63
  store i32 %64, i32* %13, align 4
  br label %231

65:                                               ; preds = %54
  %66 = load %struct.zynq_fpga_priv*, %struct.zynq_fpga_priv** %10, align 8
  %67 = getelementptr inbounds %struct.zynq_fpga_priv, %struct.zynq_fpga_priv* %66, i32 0, i32 1
  %68 = load i32, i32* %67, align 4
  %69 = load i32, i32* @SLCR_FPGA_RST_CTRL_OFFSET, align 4
  %70 = load i32, i32* @FPGA_RST_ALL_MASK, align 4
  %71 = call i32 @regmap_write(i32 %68, i32 %69, i32 %70)
  %72 = load %struct.zynq_fpga_priv*, %struct.zynq_fpga_priv** %10, align 8
  %73 = getelementptr inbounds %struct.zynq_fpga_priv, %struct.zynq_fpga_priv* %72, i32 0, i32 1
  %74 = load i32, i32* %73, align 4
  %75 = load i32, i32* @SLCR_LVL_SHFTR_EN_OFFSET, align 4
  %76 = load i32, i32* @LVL_SHFTR_DISABLE_ALL_MASK, align 4
  %77 = call i32 @regmap_write(i32 %74, i32 %75, i32 %76)
  %78 = load %struct.zynq_fpga_priv*, %struct.zynq_fpga_priv** %10, align 8
  %79 = getelementptr inbounds %struct.zynq_fpga_priv, %struct.zynq_fpga_priv* %78, i32 0, i32 1
  %80 = load i32, i32* %79, align 4
  %81 = load i32, i32* @SLCR_LVL_SHFTR_EN_OFFSET, align 4
  %82 = load i32, i32* @LVL_SHFTR_ENABLE_PS_TO_PL, align 4
  %83 = call i32 @regmap_write(i32 %80, i32 %81, i32 %82)
  %84 = load %struct.zynq_fpga_priv*, %struct.zynq_fpga_priv** %10, align 8
  %85 = load i32, i32* @CTRL_OFFSET, align 4
  %86 = call i32 @zynq_fpga_read(%struct.zynq_fpga_priv* %84, i32 %85)
  store i32 %86, i32* %11, align 4
  %87 = load i32, i32* @CTRL_PCFG_PROG_B_MASK, align 4
  %88 = load i32, i32* %11, align 4
  %89 = or i32 %88, %87
  store i32 %89, i32* %11, align 4
  %90 = load %struct.zynq_fpga_priv*, %struct.zynq_fpga_priv** %10, align 8
  %91 = load i32, i32* @CTRL_OFFSET, align 4
  %92 = load i32, i32* %11, align 4
  %93 = call i32 @zynq_fpga_write(%struct.zynq_fpga_priv* %90, i32 %91, i32 %92)
  %94 = load %struct.zynq_fpga_priv*, %struct.zynq_fpga_priv** %10, align 8
  %95 = load i32, i32* @STATUS_OFFSET, align 4
  %96 = load i32, i32* %12, align 4
  %97 = load i32, i32* %12, align 4
  %98 = load i32, i32* @STATUS_PCFG_INIT_MASK, align 4
  %99 = and i32 %97, %98
  %100 = load i32, i32* @INIT_POLL_DELAY, align 4
  %101 = load i32, i32* @INIT_POLL_TIMEOUT, align 4
  %102 = call i32 @zynq_fpga_poll_timeout(%struct.zynq_fpga_priv* %94, i32 %95, i32 %96, i32 %99, i32 %100, i32 %101)
  store i32 %102, i32* %13, align 4
  %103 = load i32, i32* %13, align 4
  %104 = icmp ne i32 %103, 0
  br i1 %104, label %105, label %109

105:                                              ; preds = %65
  %106 = load %struct.fpga_manager*, %struct.fpga_manager** %6, align 8
  %107 = getelementptr inbounds %struct.fpga_manager, %struct.fpga_manager* %106, i32 0, i32 0
  %108 = call i32 @dev_err(i32* %107, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.2, i64 0, i64 0))
  br label %231

109:                                              ; preds = %65
  %110 = load %struct.zynq_fpga_priv*, %struct.zynq_fpga_priv** %10, align 8
  %111 = load i32, i32* @CTRL_OFFSET, align 4
  %112 = call i32 @zynq_fpga_read(%struct.zynq_fpga_priv* %110, i32 %111)
  store i32 %112, i32* %11, align 4
  %113 = load i32, i32* @CTRL_PCFG_PROG_B_MASK, align 4
  %114 = xor i32 %113, -1
  %115 = load i32, i32* %11, align 4
  %116 = and i32 %115, %114
  store i32 %116, i32* %11, align 4
  %117 = load %struct.zynq_fpga_priv*, %struct.zynq_fpga_priv** %10, align 8
  %118 = load i32, i32* @CTRL_OFFSET, align 4
  %119 = load i32, i32* %11, align 4
  %120 = call i32 @zynq_fpga_write(%struct.zynq_fpga_priv* %117, i32 %118, i32 %119)
  %121 = load %struct.zynq_fpga_priv*, %struct.zynq_fpga_priv** %10, align 8
  %122 = load i32, i32* @STATUS_OFFSET, align 4
  %123 = load i32, i32* %12, align 4
  %124 = load i32, i32* %12, align 4
  %125 = load i32, i32* @STATUS_PCFG_INIT_MASK, align 4
  %126 = and i32 %124, %125
  %127 = icmp ne i32 %126, 0
  %128 = xor i1 %127, true
  %129 = zext i1 %128 to i32
  %130 = load i32, i32* @INIT_POLL_DELAY, align 4
  %131 = load i32, i32* @INIT_POLL_TIMEOUT, align 4
  %132 = call i32 @zynq_fpga_poll_timeout(%struct.zynq_fpga_priv* %121, i32 %122, i32 %123, i32 %129, i32 %130, i32 %131)
  store i32 %132, i32* %13, align 4
  %133 = load i32, i32* %13, align 4
  %134 = icmp ne i32 %133, 0
  br i1 %134, label %135, label %139

135:                                              ; preds = %109
  %136 = load %struct.fpga_manager*, %struct.fpga_manager** %6, align 8
  %137 = getelementptr inbounds %struct.fpga_manager, %struct.fpga_manager* %136, i32 0, i32 0
  %138 = call i32 @dev_err(i32* %137, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.3, i64 0, i64 0))
  br label %231

139:                                              ; preds = %109
  %140 = load %struct.zynq_fpga_priv*, %struct.zynq_fpga_priv** %10, align 8
  %141 = load i32, i32* @CTRL_OFFSET, align 4
  %142 = call i32 @zynq_fpga_read(%struct.zynq_fpga_priv* %140, i32 %141)
  store i32 %142, i32* %11, align 4
  %143 = load i32, i32* @CTRL_PCFG_PROG_B_MASK, align 4
  %144 = load i32, i32* %11, align 4
  %145 = or i32 %144, %143
  store i32 %145, i32* %11, align 4
  %146 = load %struct.zynq_fpga_priv*, %struct.zynq_fpga_priv** %10, align 8
  %147 = load i32, i32* @CTRL_OFFSET, align 4
  %148 = load i32, i32* %11, align 4
  %149 = call i32 @zynq_fpga_write(%struct.zynq_fpga_priv* %146, i32 %147, i32 %148)
  %150 = load %struct.zynq_fpga_priv*, %struct.zynq_fpga_priv** %10, align 8
  %151 = load i32, i32* @STATUS_OFFSET, align 4
  %152 = load i32, i32* %12, align 4
  %153 = load i32, i32* %12, align 4
  %154 = load i32, i32* @STATUS_PCFG_INIT_MASK, align 4
  %155 = and i32 %153, %154
  %156 = load i32, i32* @INIT_POLL_DELAY, align 4
  %157 = load i32, i32* @INIT_POLL_TIMEOUT, align 4
  %158 = call i32 @zynq_fpga_poll_timeout(%struct.zynq_fpga_priv* %150, i32 %151, i32 %152, i32 %155, i32 %156, i32 %157)
  store i32 %158, i32* %13, align 4
  %159 = load i32, i32* %13, align 4
  %160 = icmp ne i32 %159, 0
  br i1 %160, label %161, label %165

161:                                              ; preds = %139
  %162 = load %struct.fpga_manager*, %struct.fpga_manager** %6, align 8
  %163 = getelementptr inbounds %struct.fpga_manager, %struct.fpga_manager* %162, i32 0, i32 0
  %164 = call i32 @dev_err(i32* %163, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.2, i64 0, i64 0))
  br label %231

165:                                              ; preds = %139
  br label %166

166:                                              ; preds = %165, %47
  %167 = load %struct.zynq_fpga_priv*, %struct.zynq_fpga_priv** %10, align 8
  %168 = load i32, i32* @CTRL_OFFSET, align 4
  %169 = call i32 @zynq_fpga_read(%struct.zynq_fpga_priv* %167, i32 %168)
  store i32 %169, i32* %11, align 4
  %170 = load %struct.fpga_image_info*, %struct.fpga_image_info** %7, align 8
  %171 = getelementptr inbounds %struct.fpga_image_info, %struct.fpga_image_info* %170, i32 0, i32 0
  %172 = load i32, i32* %171, align 4
  %173 = load i32, i32* @FPGA_MGR_ENCRYPTED_BITSTREAM, align 4
  %174 = and i32 %172, %173
  %175 = icmp ne i32 %174, 0
  br i1 %175, label %176, label %187

176:                                              ; preds = %166
  %177 = load %struct.zynq_fpga_priv*, %struct.zynq_fpga_priv** %10, align 8
  %178 = load i32, i32* @CTRL_OFFSET, align 4
  %179 = load i32, i32* @CTRL_PCAP_PR_MASK, align 4
  %180 = load i32, i32* @CTRL_PCAP_MODE_MASK, align 4
  %181 = or i32 %179, %180
  %182 = load i32, i32* @CTRL_PCAP_RATE_EN_MASK, align 4
  %183 = or i32 %181, %182
  %184 = load i32, i32* %11, align 4
  %185 = or i32 %183, %184
  %186 = call i32 @zynq_fpga_write(%struct.zynq_fpga_priv* %177, i32 %178, i32 %185)
  br label %196

187:                                              ; preds = %166
  %188 = load %struct.zynq_fpga_priv*, %struct.zynq_fpga_priv** %10, align 8
  %189 = load i32, i32* @CTRL_OFFSET, align 4
  %190 = load i32, i32* @CTRL_PCAP_PR_MASK, align 4
  %191 = load i32, i32* @CTRL_PCAP_MODE_MASK, align 4
  %192 = or i32 %190, %191
  %193 = load i32, i32* %11, align 4
  %194 = or i32 %192, %193
  %195 = call i32 @zynq_fpga_write(%struct.zynq_fpga_priv* %188, i32 %189, i32 %194)
  br label %196

196:                                              ; preds = %187, %176
  %197 = load %struct.zynq_fpga_priv*, %struct.zynq_fpga_priv** %10, align 8
  %198 = load i32, i32* @STATUS_OFFSET, align 4
  %199 = call i32 @zynq_fpga_read(%struct.zynq_fpga_priv* %197, i32 %198)
  store i32 %199, i32* %12, align 4
  %200 = load i32, i32* %12, align 4
  %201 = load i32, i32* @STATUS_DMA_Q_F, align 4
  %202 = and i32 %200, %201
  %203 = icmp ne i32 %202, 0
  br i1 %203, label %210, label %204

204:                                              ; preds = %196
  %205 = load i32, i32* %12, align 4
  %206 = load i32, i32* @STATUS_DMA_Q_E, align 4
  %207 = and i32 %205, %206
  %208 = load i32, i32* @STATUS_DMA_Q_E, align 4
  %209 = icmp ne i32 %207, %208
  br i1 %209, label %210, label %216

210:                                              ; preds = %204, %196
  %211 = load %struct.fpga_manager*, %struct.fpga_manager** %6, align 8
  %212 = getelementptr inbounds %struct.fpga_manager, %struct.fpga_manager* %211, i32 0, i32 0
  %213 = call i32 @dev_err(i32* %212, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.4, i64 0, i64 0))
  %214 = load i32, i32* @EBUSY, align 4
  %215 = sub nsw i32 0, %214
  store i32 %215, i32* %13, align 4
  br label %231

216:                                              ; preds = %204
  %217 = load %struct.zynq_fpga_priv*, %struct.zynq_fpga_priv** %10, align 8
  %218 = load i32, i32* @MCTRL_OFFSET, align 4
  %219 = call i32 @zynq_fpga_read(%struct.zynq_fpga_priv* %217, i32 %218)
  store i32 %219, i32* %11, align 4
  %220 = load %struct.zynq_fpga_priv*, %struct.zynq_fpga_priv** %10, align 8
  %221 = load i32, i32* @MCTRL_OFFSET, align 4
  %222 = load i32, i32* @MCTRL_PCAP_LPBK_MASK, align 4
  %223 = xor i32 %222, -1
  %224 = load i32, i32* %11, align 4
  %225 = and i32 %223, %224
  %226 = call i32 @zynq_fpga_write(%struct.zynq_fpga_priv* %220, i32 %221, i32 %225)
  %227 = load %struct.zynq_fpga_priv*, %struct.zynq_fpga_priv** %10, align 8
  %228 = getelementptr inbounds %struct.zynq_fpga_priv, %struct.zynq_fpga_priv* %227, i32 0, i32 0
  %229 = load i32, i32* %228, align 4
  %230 = call i32 @clk_disable(i32 %229)
  store i32 0, i32* %5, align 4
  br label %237

231:                                              ; preds = %210, %161, %135, %105, %59, %40
  %232 = load %struct.zynq_fpga_priv*, %struct.zynq_fpga_priv** %10, align 8
  %233 = getelementptr inbounds %struct.zynq_fpga_priv, %struct.zynq_fpga_priv* %232, i32 0, i32 0
  %234 = load i32, i32* %233, align 4
  %235 = call i32 @clk_disable(i32 %234)
  %236 = load i32, i32* %13, align 4
  store i32 %236, i32* %5, align 4
  br label %237

237:                                              ; preds = %231, %216, %23
  %238 = load i32, i32* %5, align 4
  ret i32 %238
}

declare dso_local i32 @clk_enable(i32) #1

declare dso_local i32 @zynq_fpga_read(%struct.zynq_fpga_priv*, i32) #1

declare dso_local i32 @dev_err(i32*, i8*) #1

declare dso_local i32 @zynq_fpga_has_sync(i8*, i64) #1

declare dso_local i32 @regmap_write(i32, i32, i32) #1

declare dso_local i32 @zynq_fpga_write(%struct.zynq_fpga_priv*, i32, i32) #1

declare dso_local i32 @zynq_fpga_poll_timeout(%struct.zynq_fpga_priv*, i32, i32, i32, i32, i32) #1

declare dso_local i32 @clk_disable(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
